# seroost

./: .gitignore  Cargo.toml  README.md  index.html  index.js
src/: lexer.rs  main.rs  model.rs  server.rs
src/snowball/algorithms/: english_stemmer.rs
