[package]
name = "seroost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
sqlite = "0.31.1"
sqlite3-sys = "0.15.2"
tiny_http = "0.12.0"
xml-rs = "0.8.19"
